--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
         height: 50px;
         border-radius: 50%;
         background: conic-gradient(#0000 10%, #4facfe);
+        mask: radial-gradient(farthest-side, #0000 calc(100% - 8px), #000 0);
         -webkit-mask: radial-gradient(
           farthest-side,
           #0000 calc(100% - 8px),
@@ -257,10 +258,10 @@
           </div>
         </div>
 
-        <div class="mt-8">
+        <div class="mt-8 flex flex-row space-x-3">
           <button
             id="generate-btn"
-            class="w-full text-white font-bold py-3 px-4 rounded-lg focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500 transition-all duration-300 transform hover:scale-105 flex items-center justify-center btn-gradient"
+            class="flex-1 text-white font-bold py-3 px-4 rounded-lg focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500 transition-all duration-300 transform hover:scale-105 flex items-center justify-center btn-gradient"
           >
             <svg
               xmlns="http://www.w3.org/2000/svg"
@@ -275,13 +276,36 @@
               class="mr-2"
             >
               <path d="M12 22h6a2 2 0 0 0 2-2V7l-5-5H6a2 2 0 0 0-2 2v5" />
-              <path d="M14 2v4a2 2 0 0 0 2 2h4" />
+              <path d="14 2v4a2 2 0 0 0 2 2h4" />
               <path
                 d="m10 18-3.13-3.13a.5.5 0 0 1 0-.7l3.13-3.13a.5.5 0 0 1 .7 0l.2.2a.5.5 0 0 1 0 .7L8.9 14l1.9 1.9a.5.5 0 0 1 0 .7l-.2.2a.5.5 0 0 1-.7 0Z"
               />
               <path d="M6 14h5" />
             </svg>
-            Generate .ics File
+            Parse Itinerary
+          </button>
+          <button
+            id="reset-btn"
+            class="flex-1 text-white font-bold py-3 px-4 rounded-lg focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-gray-500 transition-all duration-300 transform hover:scale-105 flex items-center justify-center bg-gray-500 hover:bg-gray-600"
+          >
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="20"
+              height="20"
+              viewBox="0 0 24 24"
+              fill="none"
+              stroke="currentColor"
+              stroke-width="2"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              class="mr-2"
+            >
+              <path
+                d="M3 7v10a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2V9a2 2 0 0 0-2-2H5a2 2 0 0 0-2 2z"
+              ></path>
+              <polyline points="9 7 14 12 9 17"></polyline>
+            </svg>
+            Reset
           </button>
         </div>
         <!-- Loading and Result Section -->
@@ -390,6 +414,7 @@
       const apiKeyInput = document.getElementById("api-key-input");
       const saveApiKeyBtn = document.getElementById("save-api-key-btn");
       const apiKeyError = document.getElementById("api-key-error");
+      const resetBtn = document.getElementById("reset-btn");
 
       let eventsData = [];
       let imageBase64 = null;
@@ -496,6 +521,32 @@
         );
       });
 
+      function resetForm() {
+        textInput.value = "";
+        imageBase64 = null;
+        imageUploadInput.value = "";
+        imagePreview.src = "";
+        imageName.textContent = "";
+        uploadPrompt.classList.remove("hidden");
+        imagePreviewContainer.classList.add("hidden");
+        textInput.disabled = false;
+        textInput.classList.remove(
+          "bg-gray-100",
+          "dark:bg-gray-800",
+          "cursor-not-allowed"
+        );
+        resultsContainer.classList.add("hidden");
+        resultsContainer.innerHTML = "";
+        downloadContainer.classList.add("hidden");
+        loader.classList.add("hidden");
+        hideError();
+        eventsData = [];
+        generateBtn.disabled = false;
+        generateBtn.classList.remove("opacity-50", "cursor-not-allowed");
+      }
+
+      resetBtn.addEventListener("click", resetForm);
+
       // Main function to handle generation
       generateBtn.addEventListener("click", async () => {
         const apiKey = localStorage.getItem("openrouter_api_key");
@@ -545,7 +596,7 @@
         const model = "openrouter/sonoma-dusk-alpha";
         const url = "https://openrouter.ai/api/v1/chat/completions";
 
-        const systemPrompt = `You are an intelligent assistant that parses text and images for travel itineraries. Your task is to extract event details into a structured JSON format. You MUST return a single JSON object with a key "events", which contains an array of event objects. The current year is ${new Date().getFullYear()}. Assume the current or next year if not specified. Identify IANA timezones (e.g., 'America/New_York'). For flights, the start time is in the departure city's timezone and the end time is in the arrival city's timezone. All dates and times MUST be in 'YYYY-MM-DDTHH:mm:ss' local time format. Calculate a reasonable end time if it's missing. If crucial information is missing, make a reasonable guess and note it in the description. The summary should be concise. For flight events, the summary MUST be "Flight [DEPARTURE CITY] to [ARRIVAL CITY]". Use city names, not airport codes. For hotel events, the summary MUST be "Stay at [HOTEL NAME]". If no events are found, return an empty array for the "events" key. Each event object must have this structure: {"summary": "string", "dtstart": "YYYY-MM-DDTHH:mm:ss", "start_timezone": "IANA/Timezone", "dtend": "YYYY-MM-DDTHH:mm:ss", "end_timezone": "IANA/Timezone", "location": "string", "description": "string"}`;
+        const systemPrompt = `You are an intelligent assistant that parses text and images for travel itineraries. Your task is to extract event details into a structured JSON format. You MUST return a single JSON object with a key "events", which contains an array of event objects. The current year is ${new Date().getFullYear()}. Assume the current or next year if not specified. Identify IANA timezones (e.g., 'America/New_York'). For flights, the start time is in the departure city's timezone and the end time is in the arrival city's timezone. For flight events, the location MUST be the departure airport location (e.g., 'JFK, New York, NY'). All dates and times MUST be in 'YYYY-MM-DDTHH:mm:ss' local time format. Calculate a reasonable end time if it's missing. If crucial information is missing, make a reasonable guess and note it in the description. The summary should be concise. For flight events, the summary MUST be "Flight [DEPARTURE CITY] to [ARRIVAL CITY]". Use city names, not airport codes. For hotel events, the summary MUST be "Stay at [HOTEL NAME]". If no events are found, return an empty array for the "events" key. Each event object must have this structure: {"summary": "string", "dtstart": "YYYY-MM-DDTHH:mm:ss", "start_timezone": "IANA/Timezone", "dtend": "YYYY-MM-DDTHH:mm:ss", "end_timezone": "IANA/Timezone", "location": "string", "description": "string"}`;
 
         const userContent = [];
         if (prompt) userContent.push({ type: "text", text: prompt });
