--- a/index.html
+++ b/index.html
@@ -441,10 +441,10 @@
               type="text"
               id="settings-model-input"
               class="w-full p-3 border border-gray-200 dark:border-gray-700 rounded-lg bg-white/50 dark:bg-gray-800/50 text-gray-800 dark:text-gray-200 focus:ring-2 focus:ring-blue-400 transition-all"
-              placeholder="openrouter/sonoma-dusk-alpha"
+              placeholder="nvidia/nemotron-nano-12b-v2-vl:free"
             />
             <p class="text-xs text-gray-500 dark:text-gray-500 mt-1">
-              Default: openrouter/sonoma-dusk-alpha
+              Default: nvidia/nemotron-nano-12b-v2-vl:free
             </p>
           </div>
         </div>
@@ -590,7 +590,7 @@
         const storedApiKey = localStorage.getItem("openrouter_api_key") || "";
         const storedModel =
           localStorage.getItem("openrouter_model") ||
-          "openrouter/sonoma-dusk-alpha";
+          "nvidia/nemotron-nano-12b-v2-vl:free";
 
         settingsApiKeyInput.value = storedApiKey;
         settingsModelInput.value = storedModel;
@@ -634,7 +634,7 @@
           } else {
             localStorage.setItem(
               "openrouter_model",
-              "openrouter/sonoma-dusk-alpha"
+              "nvidia/nemotron-nano-12b-v2-vl:free"
             );
           }
 
@@ -785,10 +785,37 @@
         const apiKey = localStorage.getItem("openrouter_api_key");
         const model =
           localStorage.getItem("openrouter_model") ||
-          "openrouter/sonoma-dusk-alpha";
+          "nvidia/nemotron-nano-12b-v2-vl:free";
         const url = "https://openrouter.ai/api/v1/chat/completions";
 
-        const systemPrompt = `You are an intelligent assistant that parses text and images for travel itineraries. Your task is to extract event details into a structured JSON format. You MUST return a single JSON object with a key "events", which contains an array of event objects. The current year is ${new Date().getFullYear()}. Assume the current or next year if not specified. Identify IANA timezones (e.g., 'America/New_York'). For flights, the start time is in the departure city's timezone and the end time is in the arrival city's timezone. For flight events, the location MUST be the departure airport location (e.g., 'JFK, New York, NY'). All dates and times MUST be in 'YYYY-MM-DDTHH:mm:ss' local time format. Calculate a reasonable end time if it's missing. If crucial information is missing, make a reasonable guess and note it in the description. The summary should be concise. For flight events, the summary MUST be "Flight [DEPARTURE CITY] to [ARRIVAL CITY]". Use city names, not airport codes. For hotel events, the summary MUST be "Stay at [HOTEL NAME]". If no events are found, return an empty array for the "events" key. Each event object must have this structure: {"summary": "string", "dtstart": "YYYY-MM-DDTHH:mm:ss", "start_timezone": "IANA/Timezone", "dtend": "YYYY-MM-DDTHH:mm:ss", "end_timezone": "IANA/Timezone", "location": "string", "description": "string"}`;
+        const systemPrompt = `You are an intelligent assistant that parses text and images for travel itineraries.
+          Your task is to extract event details into a structured JSON format.
+
+          You MUST return a single JSON object with a key "events", which contains an array of event objects.
+
+          Rules:
+          - The current time is ${new Date()}. If the event year is not specified, assume the current or next year to make sure the event is happening in nearest future.
+          - Identify IANA timezones (e.g., 'America/New_York').
+          - For flights, the start time is in the departure city's timezone and the end time is in the arrival city's timezone.
+          - For flight events, the location MUST be the departure airport location (e.g., 'JFK, New York, NY').
+          - All dates and times MUST be in 'YYYY-MM-DDTHH:mm:ss' local time format.
+          - Calculate a reasonable end time if it's missing.
+          - If crucial information is missing, make a reasonable guess and note it in the description.
+          - The summary should be concise.
+          - For flight events, the summary MUST be "Flight [DEPARTURE CITY] to [ARRIVAL CITY]". Use city names, not airport codes.
+          - For hotel events, the summary MUST be "Stay at [HOTEL NAME]".
+          - If no events are found, return an empty array for the "events" key.
+
+          Each event object must have this structure:
+          {
+            "summary": "string",
+            "dtstart": "YYYY-MM-DDTHH:mm:ss",
+            "start_timezone": "IANA/Timezone",
+            "dtend": "YYYY-MM-DDTHH:mm:ss",
+            "end_timezone": "IANA/Timezone",
+            "location": "string",
+            "description": "string"
+          }`;
 
         const userContent = [];
         if (prompt) userContent.push({ type: "text", text: prompt });
