feat: sync API key input field with localStorage value
When a valid OpenRouter API key is saved, update the settings input field
to display the stored key. This ensures the UI reflects the actual saved
state and prevents inconsistency between the modal input and settings
display.

--- a/index.html
+++ b/index.html
@@ -574,6 +574,7 @@
           // Basic validation for OpenRouter key format
           if (key.startsWith("sk-or-v1-")) {
             localStorage.setItem("openrouter_api_key", key);
+            settingsApiKeyInput.value = key;
             apiKeyModal.classList.add("hidden");
             apiKeyError.classList.add("hidden");
             apiKeyInput.classList.remove("border-red-500");
