--- a/index.html
+++ b/index.html
@@ -18,30 +18,73 @@
     <div class="bg-orb orb-2" aria-hidden="true"></div>
     <div class="bg-grid" aria-hidden="true"></div>
 
-    <button id="settings-btn" class="icon-button" title="Settings">
-      <svg
-        xmlns="http://www.w3.org/2000/svg"
-        width="22"
-        height="22"
-        viewBox="0 0 24 24"
-        fill="none"
-        stroke="currentColor"
-        stroke-width="2"
-        stroke-linecap="round"
-        stroke-linejoin="round"
-      >
-        <circle cx="12" cy="12" r="3"></circle>
-        <path
-          d="M19.4 15a1.65 1.65 0 0 0 .33 1.82l.06.06a2 2 0 0 1 0 2.83 2 2 0 0 1-2.83 0l-.06-.06a1.65 1.65 0 0 0-1.82-.33 1.65 1.65 0 0 0-1 1.51V21a2 2 0 0 1-2 2 2 2 0 0 1-2-2v-.09A1.65 1.65 0 0 0 9 19.4a1.65 1.65 0 0 0-1.82.33l-.06.06a2 2 0 0 1-2.83 0 2 2 0 0 1 0-2.83l.06-.06a1.65 1.65 0 0 0 .33-1.82 1.65 1.65 0 0 0-1.51-1H3a2 2 0 0 1-2-2 2 2 0 0 1 2-2h.09A1.65 1.65 0 0 0 4.6 9a1.65 1.65 0 0 0-.33-1.82l-.06-.06a2 2 0 0 1 0-2.83 2 2 0 0 1 2.83 0l.06.06a1.65 1.65 0 0 0 1.82.33H9a1.65 1.65 0 0 0 1 1.51V3a2 2 0 0 1 2-2 2 2 0 0 1 2 2v.09a1.65 1.65 0 0 0 1 1.51 1.65 1.65 0 0 0 1.82-.33l.06-.06a2 2 0 0 1 2.83 0 2 2 0 0 1 0 2.83l-.06.06a1.65 1.65 0 0 0-.33 1.82V9a1.65 1.65 0 0 0 1.51 1H21a2 2 0 0 1 2 2 2 2 0 0 1-2 2h-.09a1.65 1.65 0 0 0-1.51 1z"
-        ></path>
-      </svg>
-    </button>
+    <div class="utility-buttons">
+      <button id="help-btn" class="icon-button" title="Help">
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          width="22"
+          height="22"
+          viewBox="0 0 24 24"
+          fill="none"
+          stroke="currentColor"
+          stroke-width="2"
+          stroke-linecap="round"
+          stroke-linejoin="round"
+        >
+          <circle cx="12" cy="12" r="10"></circle>
+          <path d="M9.09 9a3 3 0 0 1 5.82 1c0 2-3 2-3 4"></path>
+          <line x1="12" y1="17" x2="12.01" y2="17"></line>
+        </svg>
+      </button>
+      <button id="settings-btn" class="icon-button" title="Settings">
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          width="22"
+          height="22"
+          viewBox="0 0 24 24"
+          fill="none"
+          stroke="currentColor"
+          stroke-width="2"
+          stroke-linecap="round"
+          stroke-linejoin="round"
+        >
+          <circle cx="12" cy="12" r="3"></circle>
+          <path
+            d="M19.4 15a1.65 1.65 0 0 0 .33 1.82l.06.06a2 2 0 0 1 0 2.83 2 2 0 0 1-2.83 0l-.06-.06a1.65 1.65 0 0 0-1.82-.33 1.65 1.65 0 0 0-1 1.51V21a2 2 0 0 1-2 2 2 2 0 0 1-2-2v-.09A1.65 1.65 0 0 0 9 19.4a1.65 1.65 0 0 0-1.82.33l-.06.06a2 2 0 0 1-2.83 0 2 2 0 0 1 0-2.83l.06-.06a1.65 1.65 0 0 0 .33-1.82 1.65 1.65 0 0 0-1.51-1H3a2 2 0 0 1-2-2 2 2 0 0 1 2-2h.09A1.65 1.65 0 0 0 4.6 9a1.65 1.65 0 0 0-.33-1.82l-.06-.06a2 2 0 0 1 0-2.83 2 2 0 0 1 2.83 0l.06.06a1.65 1.65 0 0 0 1.82.33H9a1.65 1.65 0 0 0 1 1.51V3a2 2 0 0 1 2-2 2 2 0 0 1 2 2v.09a1.65 1.65 0 0 0 1 1.51 1.65 1.65 0 0 0 1.82-.33l.06-.06a2 2 0 0 1 2.83 0 2 2 0 0 1 0 2.83l-.06.06a1.65 1.65 0 0 0-.33 1.82V9a1.65 1.65 0 0 0 1.51 1H21a2 2 0 0 1 2 2 2 2 0 0 1-2 2h-.09a1.65 1.65 0 0 0-1.51 1z"
+          ></path>
+        </svg>
+      </button>
+    </div>
 
     <main class="app-shell">
-      <header class="hero">
-        <div class="hero-badge">
-          <span class="badge-dot"></span>
-          <span class="badge-text">ICS-Gen</span>
+      <header id="tutorial-hero" class="hero">
+        <div class="hero-top">
+          <div class="hero-badge">
+            <span class="badge-dot"></span>
+            <span class="badge-text">ICS-Gen</span>
+          </div>
+          <button
+            id="dismiss-hero-btn"
+            class="hero-dismiss"
+            type="button"
+            aria-label="Dismiss tutorial"
+            title="Dismiss tutorial"
+          >
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="18"
+              height="18"
+              viewBox="0 0 24 24"
+              fill="none"
+              stroke="currentColor"
+              stroke-width="2"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+            >
+              <line x1="18" y1="6" x2="6" y2="18"></line>
+              <line x1="6" y1="6" x2="18" y2="18"></line>
+            </svg>
+          </button>
         </div>
         <div class="logo-mark">
           <svg
@@ -93,66 +136,88 @@
       </header>
 
       <section class="workspace">
-        <div class="panel panel-editor">
-          <div class="panel-header">
-            <h2>1. Add your itinerary</h2>
-            <p>Start with text, then switch to image upload if needed.</p>
+          <div class="panel panel-editor">
+            <div class="panel-header">
+            <div class="panel-header-row">
+              <div>
+                <h2>1. Add your itinerary</h2>
+                <p>Start with text, then switch to image upload if needed.</p>
+              </div>
+              <div class="input-toggle" role="tablist" aria-label="Input mode">
+                <button
+                  id="mode-text-btn"
+                  class="toggle-btn is-active"
+                  type="button"
+                  data-mode="text"
+                >
+                  Text
+                </button>
+                <button
+                  id="mode-image-btn"
+                  class="toggle-btn"
+                  type="button"
+                  data-mode="image"
+                >
+                  Image
+                </button>
+              </div>
+            </div>
+            </div>
+
+          <div id="text-input-panel" class="input-panel">
+            <label for="text-input" class="field-label">Paste Itinerary Text</label>
+            <textarea
+              id="text-input"
+              rows="6"
+              class="field field-textarea"
+              placeholder="e.g., Flight UA 345 departs New York to San Francisco on Oct 26, 2025 at 8:00 AM"
+            ></textarea>
           </div>
 
-          <label for="text-input" class="field-label">Paste Itinerary Text</label>
-          <textarea
-            id="text-input"
-            rows="6"
-            class="field field-textarea"
-            placeholder="e.g., Flight UA 345 departs New York to San Francisco on Oct 26, 2025 at 8:00 AM"
-          ></textarea>
-
-          <div class="divider"><span>OR</span></div>
-
-          <label for="image-upload-input" class="field-label">Upload an Image</label>
-          <div id="drop-zone" class="drop-zone">
-            <div id="upload-prompt" class="upload-prompt">
-              <svg
-                class="upload-icon"
-                xmlns="http://www.w3.org/2000/svg"
-                viewBox="0 0 48 48"
-                aria-hidden="true"
-              >
-                <path
-                  d="M28 8H12a4 4 0 00-4 4v20m32-12v8m0 0v8a4 4 0 01-4 4H12a4 4 0 01-4-4v-4m32-4l-3.172-3.172a4 4 0 00-5.656 0L28 28M8 32l9.172-9.172a4 4 0 015.656 0L28 28m0 0l4 4m4-24h8m-4-4v8"
-                  fill="none"
-                  stroke="currentColor"
-                  stroke-width="2"
-                  stroke-linecap="round"
-                  stroke-linejoin="round"
-                ></path>
-              </svg>
-              <div class="upload-text">
-                <label for="image-upload-input" class="upload-link">
-                  Upload a file
-                  <input
-                    id="image-upload-input"
-                    name="image-upload"
-                    type="file"
-                    class="sr-only"
-                    accept="image/*"
-                  />
-                </label>
-                <span>or drag and drop</span>
+          <div id="image-input-panel" class="input-panel hidden">
+            <label for="image-upload-input" class="field-label">Upload an Image</label>
+            <div id="drop-zone" class="drop-zone">
+              <div id="upload-prompt" class="upload-prompt">
+                <svg
+                  class="upload-icon"
+                  xmlns="http://www.w3.org/2000/svg"
+                  viewBox="0 0 48 48"
+                  aria-hidden="true"
+                >
+                  <path
+                    d="M28 8H12a4 4 0 00-4 4v20m32-12v8m0 0v8a4 4 0 01-4 4H12a4 4 0 01-4-4v-4m32-4l-3.172-3.172a4 4 0 00-5.656 0L28 28M8 32l9.172-9.172a4 4 0 015.656 0L28 28m0 0l4 4m4-24h8m-4-4v8"
+                    fill="none"
+                    stroke="currentColor"
+                    stroke-width="2"
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                  ></path>
+                </svg>
+                <div class="upload-text">
+                  <span class="upload-link">Upload a file</span>
+                  <span>or drag and drop</span>
+                </div>
+                <input
+                  id="image-upload-input"
+                  name="image-upload"
+                  type="file"
+                  class="sr-only"
+                  accept="image/*"
+                />
+                <p class="upload-hint">PNG, JPG, GIF up to 10MB</p>
               </div>
-              <p class="upload-hint">PNG, JPG, GIF up to 10MB</p>
-            </div>
-            <div id="image-preview-container" class="image-preview hidden">
-              <img
-                id="image-preview"
-                src=""
-                alt="Image preview"
-                class="image-thumb"
-              />
-              <p id="image-name" class="image-name"></p>
-              <button id="remove-image-btn" class="link-button">
-                Remove image
-              </button>
+              <div id="image-preview-container" class="image-preview hidden">
+                <img
+                  id="image-preview"
+                  src=""
+                  alt="Image preview"
+                  class="image-thumb"
+                />
+                <p id="image-name" class="image-name"></p>
+                <button id="remove-image-btn" class="link-button">
+                  Remove image
+                </button>
+              </div>
             </div>
           </div>
         </div>
