--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <meta name="theme-color" content="#fbf6ee" media="(prefers-color-scheme: light)" />
     <meta name="theme-color" content="#0a0f0d" media="(prefers-color-scheme: dark)" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
     <link rel="apple-touch-icon" href="icons/icon.png" />
   </head>
