--- a/index.html
+++ b/index.html
@@ -31,15 +31,19 @@
       content="black-translucent"
     />
     <link rel="apple-touch-icon" href="icons/icon-light.png" />
+    <link rel="icon" href="favicon.ico" sizes="any" />
+    <link rel="icon" href="icons/icon-light.png" type="image/png" />
     <link
       rel="icon"
       href="icons/icon-light.png"
       media="(prefers-color-scheme: light)"
+      type="image/png"
     />
     <link
       rel="icon"
       href="icons/icon-dark.png"
       media="(prefers-color-scheme: dark)"
+      type="image/png"
     />
   </head>
   <body class="app-body">
